--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <li><a href="about.html">About the Couple</a></li>
             <li><a href="gallery.html">Gallery</a></li>
             <li><a href="gallery.html">The Event</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="contact.html">RSVP</a></li>
         </ul>
     </nav>
     <header class="main-header">
@@ -65,9 +65,26 @@
             <div class="event-content">
                 <h3>June 12th, 2021</h3>
                     <p>5pm</p>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d49759.455713460906!2d-76.29122046875003!3d38.78741420000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b83cff5bbd0d21%3A0xc13156eda715e31d!2sTrinity%20African%20Methodist%20Episcopal%20Zion%20Church!5e0!3m2!1sen!2sus!4v1681954987951!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     <h3>St Stephens Church</h3>
                     <p>Baltimore, MD</p>
             </div>
+        </section>
+        <section class="rsvp-container">
+            <h2>RSVP</h2>
+            <form action="index.html" method="post">
+                <input type="text" name="name" id="name" placeholder="Enter your name">
+                <input type="email" name="email" id="email" placeholder="Enter your email">
+                <label for="checkbox">Plus 1?</label>
+                <label for="checkbox">Yes</label>
+                <input type="checkbox">
+                <label for="checkbox">No</label>
+
+                <input type="checkbox">
+                <input type="text" placeholder="Plus 1's Name">
+                <textarea name="message" id="message" cols="30" rows="10" placeholder="Enter your message"></textarea>
+                <input type="submit" value="Submit">
+            </form>
         </section>
     </main>
     <script src="script.js"></script>
